commit antes de estilos

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,4 @@
 @import './components/Header';
 @import './components/Main';
 @import './components/WeatherCard';
-@import './components/WeatherList;
+@import './components/WeatherList';
