--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,9 +1,8 @@
-$primary-color: #000022;
-$secondary-color:#001242;
-$blue: #0094C6;
-$dark-blue: #005E7C;
+$primary-color: #01161e;
+$blue: #124559;
+$dark-blue: #598392;
 $black: #040f16;
 $green: green;
-$light-blue: lightblue;
+$light-blue: aec3b0;
 
 $ipad-breakpoint: 768px;
