--- a/src/styles/components/_Main.scss
+++ b/src/styles/components/_Main.scss
@@ -1,7 +1,7 @@
 @import '../utils/variables.scss';
 
 input[type=text]{
-    border: 1px solid $secondary-color;
+    border: 1px solid green;
     border-radius: 4px;
 
     &:focus{
